website/resources/css/summary.css
*{
    padding: 0;
    margin: 0;
    font-family: sans-serif;
}
/**************************************************************************/
/*For Summary page*/
.blur {
    filter: blur(2px);
}

.modal {
    display: none; /* Hidden by default */
    position: fixed; 
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow-y: auto; /* Enable scroll if needed */
    border: 2px solid #333;
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
  /* Modal Content/Box */
  .modal-content {
    background-color: #fff;
    border-radius: 10px;
    border: 2px solid #333;
    margin: 40px auto; 
    padding: 20px;
    border: 1px solid #888;
    width: 85%; 
    height: 86vh;
  }
  
  /* The Close Button */
  .close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
    position: relative;
    background-color: #fff;
    border: none;
    bottom: 2%;
    padding-top: 0;
}
  
  .close:hover,
  .close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
  }

  #content{
      width: 100%;
      height: 100%;
  }

  
.wrapper{
    padding: 10px;
    margin-right: 10px;
}

.heading-text{
    margin: 10px;
    padding: 5px 4px;
}

hr{
    width: 95%;
    margin: auto;
}

/*Left side of the summary page*/
#left-side{
    float: left;
    width: 55%;
    height: 100%;
    border-right: 0.2px solid #333;
}

#ordered-list{
    margin-top: 10px;
    padding: 5px;
    height: 30vh;
    overflow-y: auto;
}

.order-row {
    width: 80%;
    height: auto;
    margin: 0 auto;
    border: 1px solid #333;
    border-radius: 15px;
    background-color: wheat;
    margin-bottom: 10px;
}

.ordered-item-title {
    color: #333;
    font-size: 15px;
    font-weight: bold;
    margin-left: 10px;

}

.ordered-item-image {
    margin:3px 3px;
    width: 55px;
    height: 55px;
    border-radius: 50%;
}

.ordered-quantity{
    color: #333;
    font-size: 15px;
    font-weight: bold;
    margin-left: auto;
    margin-right: 20px;

}

#user-input-group{
    margin-top: 10px;
}

#user-inputs{
    margin-top:  5px;
    float: left;
    width: 49%;
}

#user-card-info{
    margin-top: 5px;
    float: right;
    width: 49%;
}

.user-information{
    display: block;
    margin-top: 20px;
    width: 88%;
    height: 25px;
    margin-left: 20px;
    padding: 10px 10px;
    border-radius: 10px;
}

#user-inputs .user-information {
    float: left;
    margin-left: 0;
}

#expiry-date-label{
    font-size: 17px;
    margin-top: 20px;
    margin-left: 20px;
    padding-top: 20px;
    float: left;
}

.expiry-date-information{
    display: block;
    margin-top: 20px;
    margin-left: 10px;
    width: 20%;
    height: 25px;
    padding: 10px 10px;
    border-radius: 10px;
    border: 1px solid #333;
    float: right;
}

/*Right side of the summary page*/
#right-side{
    float: right;
    width: 42%;
    height: 100%;
}


/*#piechart{*/
/*    width: 300px;*/
/*    height: 300px;*/
/*    margin-top: 50px;*/
/*    margin-left: auto;*/
/*    margin-right: auto;*/
/*    background-color: rgb(128, 119, 119);*/
/*    color: #333;*/
/*    border-radius: 50%;*/
/*    border: 2px solid black;*/
/*    display: flex;*/
/*    justify-content: center;*/
/*    align-items: center;*/
/*}*/

#checkbox-for-chart{
    position: relative;
    left: 20%;
    width: 25px;
    height: 25px;
}

label{
    font-size: 18px;
}

#total-order-information, #total-order-price{
    /*margin-top: 20px;*/
    width: fit-content;
    /*vertical-align: bottom;*/
    display: inline-block;
}

#ordersummaryinfo{
    position: relative;
    bottom: auto;
    width: 35vw;
    /*outline: 2px solid black;*/
}

#summary-page-price{
    text-align: center;
}

.order-info{
    margin-top:5px;
    font-size: 20px;
    text-align: right;
    letter-spacing: 3px;
}

.order-price{
    margin-top:5px;
    font-size: 20px;
    text-align: right;
}

.sum-page-button{
    width: 40%;
    height: 50px;
    border: 1px solid #333;
    border-radius: 10px;
    margin-top: 30px;
    margin-left: 30px;
}

.close-modal{
    float: right;
    background-color: #fff;
    border: none;
    font-weight: bolder;
    font-size: larger;
}

#user-card::-webkit-outer-spin-button,
#user-card::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

#user-security-code::-webkit-outer-spin-button,
#user-security-code::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

